--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "cuid": "^2.1.4",
     "next": "7.0.2",
     "ramda": "0.26.1",
-    "react": "16.8.0-alpha.1",
-    "react-dom": "16.8.0-alpha.1",
+    "react": "16.8.0",
+    "react-dom": "16.8.0",
     "react-redux": "6.0.0",
     "redux": "4.0.1",
     "redux-logger": "3.0.6",
