--- a/api/package.json
+++ b/api/package.json
@@ -35,7 +35,7 @@
     "@babel/polyfill": "7.2.5",
     "@babel/preset-env": "7.3.1",
     "@babel/register": "7.0.0",
-    "nodemon": "^1.18.10",
+    "nodemon": "1.18.10",
     "prettier": "1.16.4",
     "tape": "4.9.2",
     "watch": "1.0.2"
