--- a/api/package.json
+++ b/api/package.json
@@ -26,7 +26,10 @@
     "cuid": "2.1.4",
     "express": "4.16.4",
     "express-graphql": "0.7.1",
+    "express-jwt": "5.3.1",
+    "express-jwt-authz": "2.3.1",
     "graphql": "14.1.1",
+    "jwks-rsa": "1.4.0",
     "ramda": "0.26.1"
   },
   "devDependencies": {
@@ -36,7 +39,7 @@
     "@babel/preset-env": "7.3.1",
     "@babel/register": "7.0.0",
     "nodemon": "1.18.10",
-    "prettier": "1.16.4",
+    "prettier": "^1.16.4",
     "supertest": "3.4.2",
     "tape": "4.9.2",
     "watch": "1.0.2"
