--- a/now.json
+++ b/now.json
@@ -1,10 +1,4 @@
 {
   "version": 2,
-  "name": "todos",
-  "builds": [
-    { "src": "/api/source/todos-endpoint.js", "use": "@now/node" }
-  ],
-  "routes": [
-    { "src": "/api/todos", "dest": "/api/source/todos-endpoint.js" }
-  ]
+  "name": "todos"
 }
