--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "express-graphql": "0.7.1",
     "express-jwt": "5.3.1",
     "express-jwt-authz": "2.3.1",
+    "firebase": "^5.11.0",
     "firebase-admin": "^7.3.0",
     "graphql": "14.1.1",
     "jwks-rsa": "1.4.0",
